update helm chart * set up sa so it can be parameterized, but forgot to change references in role bindings.  resolved * bumped change in deploy_dev as its not getting run by the actions

--- a/helm-charts/templates/smk-app-roles4sa.yaml
+++ b/helm-charts/templates/smk-app-roles4sa.yaml
@@ -4,6 +4,15 @@ apiVersion: authorization.openshift.io/v1
 metadata:
   name:  {{ .Values.app_name }}-role
 rules:
+  - resources:
+      - configmaps
+    verbs:
+      - get
+      - list
+      - create
+      - update
+      - delete
+      - patch
   - apiGroups:
       - apps.openshift.io
     resources:
