--- a/helm-charts/templates/smk-app-rb.yaml
+++ b/helm-charts/templates/smk-app-rb.yaml
@@ -9,10 +9,11 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
 subjects:
   - kind: ServiceAccount
-    name: {{ .Values.app_name }}-sa
+    name: {{ .Values.github_actions_sa.name }}
 {{ end }}
+
 # ---
-#
+
 # {{- if .Values.deploy_service_account -}}
 # kind: RoleBinding
 # apiVersion: rbac.authorization.k8s.io/v1
