working on deploy gha * created debug env var for build action * fixed issue with dev deploy

--- a/.github/workflows/deploy_dev.yaml
+++ b/.github/workflows/deploy_dev.yaml
@@ -80,8 +80,8 @@ jobs:
         ISSUE_CONFIGMAP_NAME=github-issues-configmap
         ISSUE_URL=$(oc get configmap $ISSUE_CONFIGMAP_NAME  -o json | jq .data.issue_url)
 
-    - name: Retrieve image tag, issue url, oc namespace
-      id: retrieveimagetag
+    - name: Deploy Helm chart
+      id: deployHelm
       if: env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && env.GHCR_USER != null && env.GHCR_TOKEN != null
       run: |
 
