--- a/.github/workflows/deploy_dev.yaml
+++ b/.github/workflows/deploy_dev.yaml
@@ -96,6 +96,7 @@ jobs:
         REPONAME=${{ steps.retrieveimagetag.outputs.REPONAME }}
         DOCKER_VERSION_TAG=${{ steps.retrieveimagetag.outputs.DOCKER_VERSION_TAG }}
         IMAGE_REGISTRY=${{ steps.retrieveimagetag.outputs.IMAGE_REGISTRY }}
+        echo repo name is $REPONAME
 
         helm upgrade --install  $REPONAME helm-charts \
            --set app_name=$REPONAME \
