--- a/.github/workflows/deploy_dev.yaml
+++ b/.github/workflows/deploy_dev.yaml
@@ -98,7 +98,7 @@ jobs:
         DOCKER_VERSION_TAG=${{ steps.retrieveimagetag.outputs.DOCKER_VERSION_TAG }}
         IMAGE_REGISTRY=${{ steps.retrieveimagetag.outputs.IMAGE_REGISTRY }}
         echo repo name is $REPONAME
-
+        helm status $REPONAME
         helm upgrade --install  $REPONAME helm-charts \
            --set app_name=$REPONAME \
            --set env=dev \
