--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,7 +46,7 @@ jobs:
 
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-      if: env.DEBUG_DEPLOY == false
+      if: !(env.DEBUG_DEPLOY)
       id: checkout
       with:
         fetch-depth: 0
@@ -55,7 +55,7 @@ jobs:
     # if oc secrets provided
     - name: calculateImageTag
       id: calculateImageTag
-      if: env.DEBUG_DEPLOY == false
+      if: !(env.DEBUG_DEPLOY)
       run: |
         DATESTAMP=$(date +%Y%m%d-%H%M)
         REGISTRY="docker.pkg.github.com"
@@ -71,7 +71,7 @@ jobs:
     - name: OpenShift Action
       id: GHAOpenshiftTest
       uses: redhat-developer/openshift-actions@v1.1
-      if: env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && env.DEBUG_DEPLOY == false
+      if: env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && !(env.DEBUG_DEPLOY)
       with:
         version: '3.11.232'
         openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL }}
@@ -81,7 +81,7 @@ jobs:
     # --------- cache the image tag in a oc config map
     - name: cacheImageTag
       id: cacheImageTag
-      if: env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && env.DEBUG_DEPLOY == false
+      if: env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && !(env.DEBUG_DEPLOY)
       run: |
         IMAGETAG=${{ steps.calculateImageTag.outputs.TIMESTAMPTAG }}
         CONFMAP_NAME=imagetag2deploy
@@ -106,7 +106,7 @@ jobs:
     # --------- GET THE ISSUE URL and EVENT_INFO AND CACHE IT -------
     - name: Store Issue URL in configmap
       id: cacheIssueUrl
-      if: env.GITHUB_EVENT_NAME == 'pull_request' && env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && env.DEBUG_DEPLOY == false
+      if: env.GITHUB_EVENT_NAME == 'pull_request' && env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && !(env.DEBUG_DEPLOY)
       run: |
         CONFMAP_NAME=github-issues-configmap
         ISSUE_URL=$(jq --raw-output .pull_request.issue_url "$GITHUB_EVENT_PATH")
@@ -127,13 +127,13 @@ jobs:
 
     # --------- required by build-push-action
     - name: Set up QEMU
-      if: env.DEBUG_DEPLOY == false
+      if: !(env.DEBUG_DEPLOY)
       uses: docker/setup-qemu-action@v1
     
     # --------- required by build-push-action
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
-      if: env.DEBUG_DEPLOY == false
+      if: !(env.DEBUG_DEPLOY)
       with:
         buildkitd-flags: --debug
 
@@ -141,7 +141,7 @@ jobs:
     # - explicitly setting the GHCR_USER and TOKEN to help with transition to GHCR.IO
     - name: Login to GitHub Packages Docker Registry
       uses: docker/login-action@v1
-      if: env.GHCR_USER != null &&  env.GHCR_TOKEN != null && env.DEBUG_DEPLOY == false
+      if: env.GHCR_USER != null &&  env.GHCR_TOKEN != null && !(env.DEBUG_DEPLOY)
       with:
         registry: docker.pkg.github.com
         username: ${{ secrets.GHCR_USER }}
@@ -151,7 +151,7 @@ jobs:
     #    Push disabled because not working with this action atm
     - name: Build and push
       id: docker_build
-      if: env.GHCR_USER != null &&  env.GHCR_TOKEN != null && env.DEBUG_DEPLOY == false
+      if: env.GHCR_USER != null &&  env.GHCR_TOKEN != null && !(env.DEBUG_DEPLOY)
       uses: docker/build-push-action@v2
       with:
         context: .
@@ -162,7 +162,7 @@ jobs:
 
     # --------- Push image to remote
     - name: Push to Github Packages
-      if: env.GHCR_USER != null &&  env.GHCR_TOKEN != null && env.DEBUG_DEPLOY == false
+      if: env.GHCR_USER != null &&  env.GHCR_TOKEN != null && !(env.DEBUG_DEPLOY)
       run: |
         echo pushing the image
         # ---- commented out until pipeline goes to prod.
@@ -174,7 +174,7 @@ jobs:
     #    secrets for github user / token populated
     - name: Tag the pull request with build tag
       id: tagpullrequest
-      if: env.GITHUB_EVENT_NAME == 'pull_request' && env.GHCR_USER != null &&  env.GHCR_TOKEN != null && env.DEBUG_DEPLOY == false
+      if: env.GITHUB_EVENT_NAME == 'pull_request' && env.GHCR_USER != null &&  env.GHCR_TOKEN != null && !(env.DEBUG_DEPLOY)
       run: |
         DOCKER_VERSION_TAG=${{ steps.calculateImageTag.outputs.TIMESTAMPTAG }}
 
