--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,25 +3,25 @@ name: BUILDPackage
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 # -------- DEBUGGING --------
-# on: 
-#   push:
-#     branches: ['dev', 'smk-cdci']
+on: 
+  push:
+    branches: ['dev', 'smk-cdci']
 
-on:
-  pull_request:
-    # debug: remove the dev,putting build action on non existent branches for debug
-    branches: ['master', 'dev']
-    types: ['opened', 'reopened']
-    paths-ignore:
-      - openshift/**
-      - .vscode/**
-      - docs/**
-      - .gitignore
-      - LICENSE
-      - open-api.json
-      - readme.md
-      - helm-charts
-      - code_of_conduct.md
+# on:
+#   pull_request:
+#     # debug: remove the dev,putting build action on non existent branches for debug
+#     branches: ['master', 'dev']
+#     types: ['opened', 'reopened']
+#     paths-ignore:
+#       - openshift/**
+#       - .vscode/**
+#       - docs/**
+#       - .gitignore
+#       - LICENSE
+#       - open-api.json
+#       - readme.md
+#       - helm-charts
+#       - code_of_conduct.md
 
 jobs:
   # This workflow contains a single job called "build"
@@ -46,7 +46,7 @@ jobs:
 
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-      if: !env.DEBUG_DEPLOY
+      if: ( env.DEBUG_DEPLOY == false )
       id: checkout
       with:
         fetch-depth: 0
@@ -55,7 +55,7 @@ jobs:
     # if oc secrets provided
     - name: calculateImageTag
       id: calculateImageTag
-      if: !env.DEBUG_DEPLOY
+      if: env.DEBUG_DEPLOY == false
       run: |
         DATESTAMP=$(date +%Y%m%d-%H%M)
         REGISTRY="docker.pkg.github.com"
@@ -66,12 +66,13 @@ jobs:
         echo ::set-output name=DOCKER_LATEST_TAG::${LATEST}
         echo ::set-output name=TIMESTAMPTAG::${DATESTAMP}
         echo event name is $GITHUB_EVENT_NAME
+        echo  $DEBUG_DEPLOY
 
     # Log into openshift
     - name: OpenShift Action
       id: GHAOpenshiftTest
       uses: redhat-developer/openshift-actions@v1.1
-      if: env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && !env.DEBUG_DEPLOY
+      if: env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && (env.DEBUG_DEPLOY == false)
       with:
         version: '3.11.232'
         openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL }}
