--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -107,7 +107,7 @@ jobs:
     # --------- GET THE ISSUE URL and EVENT_INFO AND CACHE IT -------
     - name: Store Issue URL in configmap
       id: cacheIssueUrl
-      if: env.GITHUB_EVENT_NAME == 'pull_request' && env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && !(env.DEBUG_DEPLOY)
+      if: env.GITHUB_EVENT_NAME == 'pull_request' && env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && (env.DEBUG_DEPLOY == false)
       run: |
         CONFMAP_NAME=github-issues-configmap
         ISSUE_URL=$(jq --raw-output .pull_request.issue_url "$GITHUB_EVENT_PATH")
@@ -128,13 +128,13 @@ jobs:
 
     # --------- required by build-push-action
     - name: Set up QEMU
-      if: !(env.DEBUG_DEPLOY)
+      if: (!env.DEBUG_DEPLOY)
       uses: docker/setup-qemu-action@v1
     
     # --------- required by build-push-action
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
-      if: !(env.DEBUG_DEPLOY)
+      if: (env.DEBUG_DEPLOY == false
       with:
         buildkitd-flags: --debug
 
@@ -142,7 +142,7 @@ jobs:
     # - explicitly setting the GHCR_USER and TOKEN to help with transition to GHCR.IO
     - name: Login to GitHub Packages Docker Registry
       uses: docker/login-action@v1
-      if: env.GHCR_USER != null &&  env.GHCR_TOKEN != null && !(env.DEBUG_DEPLOY)
+      if: env.GHCR_USER != null &&  env.GHCR_TOKEN != null && env.DEBUG_DEPLOY == false
       with:
         registry: docker.pkg.github.com
         username: ${{ secrets.GHCR_USER }}
@@ -152,7 +152,7 @@ jobs:
     #    Push disabled because not working with this action atm
     - name: Build and push
       id: docker_build
-      if: env.GHCR_USER != null &&  env.GHCR_TOKEN != null && !(env.DEBUG_DEPLOY)
+      if: env.GHCR_USER != null &&  env.GHCR_TOKEN != null && env.DEBUG_DEPLOY == false
       uses: docker/build-push-action@v2
       with:
         context: .
@@ -163,7 +163,7 @@ jobs:
 
     # --------- Push image to remote
     - name: Push to Github Packages
-      if: env.GHCR_USER != null &&  env.GHCR_TOKEN != null && !(env.DEBUG_DEPLOY)
+      if: env.GHCR_USER != null &&  env.GHCR_TOKEN != null && env.DEBUG_DEPLOY == false
       run: |
         echo pushing the image
         # ---- commented out until pipeline goes to prod.
@@ -175,7 +175,7 @@ jobs:
     #    secrets for github user / token populated
     - name: Tag the pull request with build tag
       id: tagpullrequest
-      if: env.GITHUB_EVENT_NAME == 'pull_request' && env.GHCR_USER != null &&  env.GHCR_TOKEN != null && !(env.DEBUG_DEPLOY)
+      if: env.GITHUB_EVENT_NAME == 'pull_request' && env.GHCR_USER != null &&  env.GHCR_TOKEN != null && env.DEBUG_DEPLOY == false
       run: |
         DOCKER_VERSION_TAG=${{ steps.calculateImageTag.outputs.TIMESTAMPTAG }}
 
