--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -134,7 +134,7 @@ jobs:
     # --------- required by build-push-action
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
-      if: (env.DEBUG_DEPLOY == false
+      if: (env.DEBUG_DEPLOY == false)
       with:
         buildkitd-flags: --debug
 
