trying action flow again

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,25 +3,25 @@ name: BUILDPackage
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 # -------- DEBUGGING --------
-on: 
-  push:
-    branches: ['dev', 'smk-cdci']
+# on: 
+#   push:
+#     branches: ['dev', 'smk-cdci']
 
-# on:
-#   pull_request:
-#     # debug: remove the dev,putting build action on non existent branches for debug
-#     branches: ['master', 'dev']
-#     types: ['opened', 'reopened']
-#     paths-ignore:
-#       - openshift/**
-#       - .vscode/**
-#       - docs/**
-#       - .gitignore
-#       - LICENSE
-#       - open-api.json
-#       - readme.md
-#       - helm-charts
-#       - code_of_conduct.md
+on:
+  pull_request:
+    # debug: remove the dev,putting build action on non existent branches for debug
+    branches: ['master', 'dev']
+    types: ['opened', 'reopened']
+    paths-ignore:
+      - openshift/**
+      - .vscode/**
+      - docs/**
+      - .gitignore
+      - LICENSE
+      - open-api.json
+      - readme.md
+      - helm-charts
+      - code_of_conduct.md
 
 jobs:
   # This workflow contains a single job called "build"
