--- a/.github/workflows/deploy_dev.yaml
+++ b/.github/workflows/deploy_dev.yaml
@@ -4,7 +4,7 @@ name: "DEV Deploy"
 #TODO: once working change the event the action is associated to the one below
 on:
   workflow_run:
-    workflows: ["BUILDPackage2", "build2"]
+    workflows: ["BUILDPackage", "build"]
     types: 
       - completed
 
