--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -167,7 +167,7 @@ jobs:
       run: |
         echo pushing the image
         # ---- commented out until pipeline goes to prod.
-        docker push ${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
+        #docker push ${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
 
     # -------- Update the issue --------
     # only update if:
@@ -175,7 +175,7 @@ jobs:
     #    secrets for github user / token populated
     - name: Tag the pull request with build tag
       id: tagpullrequest
-      if: env.GITHUB_EVENT_NAME == 'pull_request' && env.GHCR_USER != null &&  env.GHCR_TOKEN != null && env.DEBUG_DEPLOY == 'false'
+      if: github.event_name == 'pull_request' && env.GHCR_USER != null &&  env.GHCR_TOKEN != null && env.DEBUG_DEPLOY == 'false'
       run: |
         DOCKER_VERSION_TAG=${{ steps.calculateImageTag.outputs.TIMESTAMPTAG }}
 
