--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -79,31 +79,6 @@ jobs:
         parameters: '{"apitoken": "${{ secrets.OPENSHIFT_TOKEN_DEV }}", "acceptUntrustedCerts": "true"}'
         cmd: 'version'
 
-    # --------- cache the image tag in a oc config map
-    - name: cacheImageTag
-      id: cacheImageTag
-      if: env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && env.DEBUG_DEPLOY == 'false'
-      run: |
-        IMAGETAG=${{ steps.calculateImageTag.outputs.TIMESTAMPTAG }}
-        CONFMAP_NAME=imagetag2deploy
-        CONF_EXISTS=$(oc get configmaps -o json |  jq '[.items[] | select(.metadata.name == "'$CONFMAP_NAME'")] | length')
-        echo conf exists is $CONF_EXISTS
-        echo imagetag is $IMAGETAG
-        
-        if [ $CONF_EXISTS -eq 0 ] 
-          then
-            methodType="create"
-        else
-            methodType="replace"
-        fi
-        echo methodType is $methodType
-        oc create configmap $CONFMAP_NAME --from-literal=current_image_tag=$IMAGETAG --dry-run -o yaml > template.yaml
-        oc $methodType -f template.yaml
-
-        # to retreive the config map later:
-        #   VAR=$(oc get configmap $CONFMAP_NAME  -o json | jq .data.current_image_tag)
-
-
     # --------- GET THE ISSUE URL and EVENT_INFO AND CACHE IT -------
     - name: Store Issue URL in configmap
       id: cacheIssueUrl
@@ -134,7 +109,7 @@ jobs:
     # --------- required by build-push-action
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
-      if: (env.DEBUG_DEPLOY == 'false')
+      if: (env.DEBUG_DEPLOY == 'false') && ${{ success() }}
       with:
         buildkitd-flags: --debug
 
@@ -142,7 +117,7 @@ jobs:
     # - explicitly setting the GHCR_USER and TOKEN to help with transition to GHCR.IO
     - name: Login to GitHub Packages Docker Registry
       uses: docker/login-action@v1
-      if: env.GHCR_USER != null &&  env.GHCR_TOKEN != null && env.DEBUG_DEPLOY == 'false'
+      if: ${{ success() }} && env.GHCR_USER != null &&  env.GHCR_TOKEN != null && env.DEBUG_DEPLOY == 'false'
       with:
         registry: docker.pkg.github.com
         username: ${{ secrets.GHCR_USER }}
@@ -152,7 +127,7 @@ jobs:
     #    Push disabled because not working with this action atm
     - name: Build and push
       id: docker_build
-      if: env.GHCR_USER != null &&  env.GHCR_TOKEN != null && env.DEBUG_DEPLOY == 'false'
+      if: ${{ success() }} && env.GHCR_USER != null &&  env.GHCR_TOKEN != null && env.DEBUG_DEPLOY == 'false'
       uses: docker/build-push-action@v2
       with:
         context: .
@@ -163,14 +138,38 @@ jobs:
 
     # --------- Push image to remote
     - name: Push to Github Packages
-      if: env.GHCR_USER != null &&  env.GHCR_TOKEN != null && env.DEBUG_DEPLOY == 'false'
+      if: ${{ success() }} && env.GHCR_USER != null &&  env.GHCR_TOKEN != null && env.DEBUG_DEPLOY == 'false'
       run: |
         echo pushing the image
         echo $GITHUB_EVENT_NAME
         echo ${{ github.event_name }}
 
         # ---- commented out until pipeline goes to prod.
-        #docker push ${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
+        docker push ${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
+
+    # --------- cache the image tag in a oc config map
+    - name: cacheImageTag
+      id: cacheImageTag
+      if: ${{ success() }} && env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && env.DEBUG_DEPLOY == 'false'
+      run: |
+        IMAGETAG=${{ steps.calculateImageTag.outputs.TIMESTAMPTAG }}
+        CONFMAP_NAME=imagetag2deploy
+        CONF_EXISTS=$(oc get configmaps -o json |  jq '[.items[] | select(.metadata.name == "'$CONFMAP_NAME'")] | length')
+        echo conf exists is $CONF_EXISTS
+        echo imagetag is $IMAGETAG
+        
+        if [ $CONF_EXISTS -eq 0 ] 
+          then
+            methodType="create"
+        else
+            methodType="replace"
+        fi
+        echo methodType is $methodType
+        oc create configmap $CONFMAP_NAME --from-literal=current_image_tag=$IMAGETAG --dry-run -o yaml > template.yaml
+        oc $methodType -f template.yaml
+
+        # to retreive the config map later:
+        #   VAR=$(oc get configmap $CONFMAP_NAME  -o json | jq .data.current_image_tag)
 
     # -------- Update the issue --------
     # only update if:
