--- a/.github/workflows/deploy_dev.yaml
+++ b/.github/workflows/deploy_dev.yaml
@@ -4,7 +4,7 @@ name: "DEV Deploy"
 #TODO: once working change the event the action is associated to the one below
 on:
   workflow_run:
-    workflows: ["BUILDPackage2", "build2"]
+    workflows: ["BUILDPackage", "build"]
     types: 
       - completed
 
@@ -23,11 +23,6 @@ jobs:
       OPENSHIFT_TOKEN_DEV: ${{secrets.OPENSHIFT_TOKEN_DEV}}
       GHCR_USER: ${{ secrets.GHCR_USER }}
       GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
-    # outputs:
-    #   dockerversiontag: ${{ steps.retrieveimagetag.outputs.DOCKER_VERSION_TAG }}
-    #   issue_url: ${{ steps.retrieveimagetag.outputs.ISSUE_URL }}
-    #   routepath: ${{ steps.deploydev.outputs.ROUTEPATH }}
-    #   github_event_path: ${{ steps.retrieveimagetag.outputs.GITHUB_EVENT_PATH }}
     steps:
 
     # Checking out code to get access to the openshift deploy template later on
@@ -108,33 +103,36 @@ jobs:
            --set app_image_pull_secret_params.registry=$IMAGE_REGISTRY
 
     # # ADD THE ROUTE TO THE ISSUE
-    # - name: Update issue
-    #   id: updateissue
-    #   run: |
-    #     echo the GITHUB_EVENT_PATH
-    #     cat $GITHUB_EVENT_PATH
-    #     ROUTEPATH=${{ steps.deploydev.outputs.ROUTEPATH }}
+    - name: Update issue
+      id: updateissue
+      run: |
+        echo the GITHUB_EVENT_PATH
+        cat $GITHUB_EVENT_PATH
+        oc_route_name=${{ github.event.repository.name }}-rt
+        ROUTEPATH=$(oc get route $oc_route_name -o json | jq .spec.host | tr -d '"' )
+        ISSUE_URL=$(oc get configmap github-issues-configmap -o json | jq .data.issueURL | tr -d '"')
 
-    #     # GET THE ISSUE URL
-    #     #issue_url=$(jq --raw-output .pull_request.issue_url "$GITHUB_EVENT_PATH")
-    #     #echo issue url is $issue_url
-    #     ## for debugging using existing pull_request
-    #     #if [ -z "$issue_url" ] || [ "$issue_url" = "null" ]
-    #     #  then
-    #     #    issue_url="https://api.github.com/repos/bcgov/bcdc-smk/issues/19/comments"
-    #     #fi
-    #     #echo issue url $issue_url
-    #     ISSUE_URL=${{ steps.retrieveimagetag.outputs.ISSUE_URL }}
 
-    #     # ADD COMMENT TO THE ISSUE
-    #     echo 'adding route to the comment for the issue'
-    #     GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
-    #     ISSUE_COMMENT="link to demo deployment of app\n https://${{ steps.deploydev.outputs.ROUTEPATH }}\n\nVerify that it looks good, if so merge the pr, otherwise close"
-    #     ISSUE_BODY='{"body": "'$ISSUE_COMMENT'"}'
+        # GET THE ISSUE URL
+        #issue_url=$(jq --raw-output .pull_request.issue_url "$GITHUB_EVENT_PATH")
+        #echo issue url is $issue_url
+        ## for debugging using existing pull_request
+        #if [ -z "$issue_url" ] || [ "$issue_url" = "null" ]
+        #  then
+        #    issue_url="https://api.github.com/repos/bcgov/bcdc-smk/issues/19/comments"
+        #fi
+        #echo issue url $issue_url
+        #ISSUE_URL=${{ steps.retrieveimagetag.outputs.ISSUE_URL }}
 
-    #     curl $ISSUE_URL -X POST --header "Authorization: Bearer $GITHUB_TOKEN" \
-    #       --header "Accept: application/vnd.github.v3+json" \
-    #       --data-raw "$ISSUE_BODY"
+        # ADD COMMENT TO THE ISSUE
+        echo 'adding route to the comment for the issue'
+        GITHUB_TOKEN=${{ secrets.GHCR_TOKEN }}
+        ISSUE_COMMENT="link to demo deployment of app\n https://$ROUTEPATH\n\nVerify that it looks good, if so merge the pr, otherwise close"
+        ISSUE_BODY='{"body": "'$ISSUE_COMMENT'"}'
+
+        curl $ISSUE_URL -X POST --header "Authorization: Bearer $GITHUB_TOKEN" \
+          --header "Accept: application/vnd.github.v3+json" \
+          --data-raw "$ISSUE_BODY"
 
     # - name: "Send Review Request 2"
     #   id: requestreview
