--- a/.github/workflows/deploy_dev.yaml
+++ b/.github/workflows/deploy_dev.yaml
@@ -134,6 +134,46 @@ jobs:
           --header "Accept: application/vnd.github.v3+json" \
           --data-raw "$ISSUE_BODY"
 
+    - name: Get GWA CLI
+      id: getGWA
+      run: |
+        curl -L -O https://github.com/bcgov/gwa-cli/releases/download/v1.0.14/gwa-cli-linux.zip
+        unzip gwa-cli-linux.zip
+        mv gwa-cli-linux gwa
+        export PATH=`pwd`:$PATH
+
+    - name: Configure Kong Route
+      id: kongconf
+      run: |
+          # extract kong config info from secrets
+          gitrepo=${{ github.event.repository.name }}
+          kongSecrets=$(oc get secret kong-secrets -o json | jq '.data' | jq '.["kong-config"] | @base64d | fromjson')
+          GWA_CLIENTID=$(echo $kongSecrets | jq '.gwa_client_id')
+          GWA_TOKEN=$(echo $kongSecrets | jq '.apikey')
+          GWA_NAMESPACE=$(echo $kongSecrets | jq '.gwa_namespace')
+          gwa_route_name=${gitrepo}-kong-route
+          oc_service_name=${gitrepo}-svc
+          oc_route_name="${gitrepo}-rt"
+          oc_route_host=https://$(oc get routes $oc_route_name -o json | jq '.spec.host' | tr -d '"')
+
+          gwa init -T \
+            --namespace=$GWA_NAMESPACE \
+            --client-id=$GWA_CLIENTID \
+            --client-secret=$GWA_TOKEN
+
+          python gwa/createGWAConfig.py \
+            service=$oc_service_name \
+            ocUrl=$oc_route_host \
+            gwa_namespace=$GWA_NAMESPACE \
+            gwa_route_name=$gwa_route_name \
+            url_prefix=$gitrepo > gwa_config.yaml
+          
+          gwa pg gwa_config.yaml
+          
+
+
+
+
     # - name: "Send Review Request 2"
     #   id: requestreview
     #   run: |
