--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "cSpell.words": [
+        "CONFMAP",
+        "IMAGETAG",
+        "TIMESTAMPTAG",
+        "configmap",
+        "configmaps",
         "github"
     ],
     "python.pythonPath": "/usr/bin/python3"
