--- a/helm-charts/templates/smk-app-rb.yaml
+++ b/helm-charts/templates/smk-app-rb.yaml
@@ -2,10 +2,10 @@
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ .Values.app_name }}-rb
+  name: {{ .Values.github_actions_sa.name }}-rb
 roleRef:
   kind: Role
-  name: {{ .Values.app_name }}-role
+  name: {{ .Values.github_actions_sa.name }}-role
   apiGroup: rbac.authorization.k8s.io
 subjects:
   - kind: ServiceAccount
