--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -84,7 +84,6 @@ jobs:
       id: cacheIssueUrl
       if: ${{ github.event_name }} == 'pull_request' && env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && (env.DEBUG_DEPLOY == 'false')
       run: |
-        CONFMAP_NAME=github-issues-configmap
         CONFMAP_NAME=${{ github.event.repository.name }}-gh-issues-cm
         ISSUE_URL=$(jq --raw-output .pull_request.issue_url "$GITHUB_EVENT_PATH")
         echo issue url is $ISSUE_URL
@@ -171,7 +170,7 @@ jobs:
         oc create configmap $CONFMAP_NAME --from-literal=current_image_tag=$IMAGETAG --dry-run -o yaml > template.yaml
         oc $methodType -f template.yaml
 
-        # to retreive the config map later:
+        # to retrieve the config map later:
         #   VAR=$(oc get configmap $CONFMAP_NAME  -o json | jq .data.current_image_tag)
 
     # -------- Update the issue --------
