--- a/.github/workflows/deploy_dev.yaml
+++ b/.github/workflows/deploy_dev.yaml
@@ -79,6 +79,7 @@ jobs:
         # ---- output the docker image repo
         echo ::set-output name=IMAGE_REGISTRY::${IMAGE_REGISTRY}
 
+        # testing actions
         # ---- Get the issue url and export it
         #ISSUE_CONFIGMAP_NAME=github-issues-configmap
         ISSUE_CONFIGMAP_NAME=${{ github.repository }}-gh-issues-cm
