--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,25 +3,25 @@ name: BUILDPackage
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 # -------- DEBUGGING --------
-# on: 
-#   push:
-#     branches: ['dev', 'smk-cdci']
+on: 
+  push:
+    branches: ['dev', 'smk-cdci']
 
-on:
-  pull_request:
-    # debug: remove the dev,putting build action on non existent branches for debug
-    branches: ['master', 'dev']
-    types: ['opened', 'reopened']
-    paths-ignore:
-      - openshift/**
-      - .vscode/**
-      - docs/**
-      - .gitignore
-      - LICENSE
-      - open-api.json
-      - readme.md
-      - helm-charts
-      - code_of_conduct.md
+# on:
+#   pull_request:
+#     # debug: remove the dev,putting build action on non existent branches for debug
+#     branches: ['master', 'dev']
+#     types: ['opened', 'reopened']
+#     paths-ignore:
+#       - openshift/**
+#       - .vscode/**
+#       - docs/**
+#       - .gitignore
+#       - LICENSE
+#       - open-api.json
+#       - readme.md
+#       - helm-charts
+#       - code_of_conduct.md
 
 
 jobs:
@@ -73,7 +73,7 @@ jobs:
     - name: OpenShift Action
       id: GHAOpenshiftTest
       uses: redhat-developer/openshift-actions@v1.1
-      if: env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && (env.DEBUG_DEPLOY == 'false')
+      if: env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && env.DEBUG_DEPLOY == 'false'
       with:
         version: '3.11.232'
         openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL }}
@@ -83,7 +83,7 @@ jobs:
     # --------- GET THE ISSUE URL and EVENT_INFO AND CACHE IT -------
     - name: Store Issue URL in configmap
       id: cacheIssueUrl
-      if: ${{ github.event_name }} == 'pull_request' && env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && (env.DEBUG_DEPLOY == 'false')
+      if: ${{ github.event_name }} == 'pull_request' && env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && env.DEBUG_DEPLOY == 'false'
       run: |
         CONFMAP_NAME=${{ github.event.repository.name }}-gh-issues-cm
         ISSUE_URL=$(jq --raw-output .pull_request.issue_url "$GITHUB_EVENT_PATH")
@@ -104,7 +104,7 @@ jobs:
 
     # --------- required by build-push-action
     - name: Set up QEMU
-      if: (env.DEBUG_DEPLOY == 'false')
+      if: env.DEBUG_DEPLOY == 'false'
       uses: docker/setup-qemu-action@v1
     
     # --------- required by build-push-action
