--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -111,7 +111,7 @@ jobs:
     # --------- required by build-push-action
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
-      if: env.DEBUG_DEPLOY == 'false' && ${{ success() }}
+      if: ${{ env.DEBUG_DEPLOY == 'false' }} && success()
       with:
         buildkitd-flags: --debug
 
