--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -56,7 +56,7 @@ jobs:
     # if oc secrets provided
     - name: calculateImageTag
       id: calculateImageTag
-      if: env.DEBUG_DEPLOY == 'false'
+      if: ${{ env.DEBUG_DEPLOY == 'false' }}
       run: |
         DATESTAMP=$(date +%Y%m%d-%H%M)
         REGISTRY="docker.pkg.github.com"
@@ -73,7 +73,7 @@ jobs:
     - name: OpenShift Action
       id: GHAOpenshiftTest
       uses: redhat-developer/openshift-actions@v1.1
-      if: ${{ env.OPENSHIFT_SERVER_URL != null }} && ${{ env.OPENSHIFT_TOKEN_DEV != null }} &&  ${{ env.DEBUG_DEPLOY == 'false' }}
+      if: ${{ env.OPENSHIFT_SERVER_URL != 'null' }} && ${{ env.OPENSHIFT_TOKEN_DEV != 'null' }} &&  ${{ env.DEBUG_DEPLOY == 'false' }}
       with:
         version: '3.11.232'
         openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL }}
