--- a/.github/workflows/testaction.yaml
+++ b/.github/workflows/testaction.yaml
@@ -53,10 +53,11 @@ jobs:
         echo  $DEBUG_DEPLOY
 
     # Log into openshift
+    # ${{ env.OPENSHIFT_SERVER_URL != 'null' }} && ${{ env.OPENSHIFT_TOKEN_DEV != 'null' }} &&
     - name: OpenShift Action
       id: GHAOpenshiftTest
       uses: redhat-developer/openshift-actions@v1.1
-      if: ${{ env.OPENSHIFT_SERVER_URL != 'null' }} && ${{ env.OPENSHIFT_TOKEN_DEV != 'null' }} &&  ${{ env.DEBUG_DEPLOY == 'false' }}
+      if: ${{ env.DEBUG_DEPLOY == 'false' }}
       with:
         version: '3.11.232'
         openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL }}
