--- a/.github/workflows/testaction.yaml
+++ b/.github/workflows/testaction.yaml
@@ -57,7 +57,7 @@ jobs:
     - name: OpenShift Action
       id: GHAOpenshiftTest
       uses: redhat-developer/openshift-actions@v1.1
-      if: ${{ env.DEBUG_DEPLOY == 'false' }}
+      if: ${{ env.DEBUG_DEPLOY == 'false' }} && ${{ env.OPENSHIFT_SERVER_URL != 'null' }}
       with:
         version: '3.11.232'
         openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL }}
