--- a/.github/workflows/testaction.yaml
+++ b/.github/workflows/testaction.yaml
@@ -22,7 +22,7 @@ jobs:
       OPENSHIFT_TOKEN_DEV: ${{secrets.OPENSHIFT_TOKEN_DEV}}
       GHCR_USER: ${{ secrets.GHCR_USER }}
       GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
-      DEBUG_DEPLOY: 'true'
+      DEBUG_DEPLOY: true
     outputs:
       dockerversiontag: ${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
       
@@ -56,13 +56,11 @@ jobs:
     # ${{ env.OPENSHIFT_SERVER_URL != 'null' }} && ${{ env.OPENSHIFT_TOKEN_DEV != 'null' }} &&
     - name: OpenShift Action
       id: GHAOpenshiftTest
-      uses: redhat-developer/openshift-actions@v1.1
-      if: ${{ env.DEBUG_DEPLOY == 'false' }} && ${{ env.OPENSHIFT_SERVER_URL != 'null' }}
-      with:
-        version: '3.11.232'
-        openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL }}
-        parameters: '{"apitoken": "${{ secrets.OPENSHIFT_TOKEN_DEV }}", "acceptUntrustedCerts": "true"}'
-        cmd: 'version'
+      #uses: redhat-developer/openshift-actions@v1.1
+      #if: ${{ env.DEBUG_DEPLOY == 'false' }} && ${{ env.OPENSHIFT_SERVER_URL != 'null' }}
+      run: |
+        echo DEBUG_DEPLOY $DEBUG_DEPLOY
+        echo OPENSHIFT_SERVER_URL $OPENSHIFT_SERVER_URL
 
     # --------- GET THE ISSUE URL and EVENT_INFO AND CACHE IT -------
     - name: Store Issue URL in configmap
